<resources>
    <string name="app_name">My Hair</string>
    <string name="title_activity_profile2">profile2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Profile</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_bakup">Backup</string>


    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string-array name="price_ranges_female">
        <item>10,000–15,000</item>
        <item>16,000–25,000</item>
        <item>26,000–50,000</item>
        <item>51,000–100,000</item>
        <item>Above 100,000</item>
    </string-array>

    <string-array name="price_ranges_male">
        <item>1,000–4,900</item>
        <item>5,000–10,000</item>
        <item>Above 10,000</item>
    </string-array>

    <string name="choose_style">Choose a style</string>
    <string name="choose_gender">Select gender</string>
    <string name="title_activity_maps">Map</string>
    <string name="choose_price_range">Choose price range</string>
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="name">Name</string>
    <string name="gender">Email</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCjHFL8VMlZQrzDe03_D3ebLn62n_WU3_c</string>
    <string-array name="array_styles">
        <item>pencil</item>
        <item>thread</item>
        <item>weave</item>
        <item>bob</item>
        <item>twist</item>
    </string-array>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_nav_drawer">NavDRawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_text">Tracking your location</string>
    <string name="image_text">image loading...</string>
    <string name="title_activity_stylist_actions">StylistActions</string>
    <string name="nav_register_style">Register Style</string>
    <string name="nav_edit_style">Edit Style</string>
    <string name="nav_view_history">View History</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_view_bookings">View bookings</string>
    <string name="title_activity_stylists_map_view">Map</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="follow">FOLLOW</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude and longitude</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="hair_requests_channel">Hair Requests</string>
    <string name="hair_requests_channel_description">This is for the incoming hair requests</string>
    <string name="nav_profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="loading">loading...</string>
    <string name="requests_replies">Hair request replies</string>
    <string name="requests_replies_description">This channel is for replies to hair requests</string>
    <string name="title_activity_stylists_map">Map</string>
    <string name="chat">CHAT</string>
    <string name="call">CALL</string>
    <string name="send">SEND</string>
    <string name="typing">typing...</string>
    <string name="loc">location</string>
</resources>
